--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,17 @@
+<h1>New Post Form</h1>
 
+<%= form_for @post do |form| %>
+  <%= form.label :title %>
+  <%= form.text_field :title %><br>
+
+  <%= form.label :content %>
+  <%= form.text_field :content %><br>
+
+  <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  <%= form.fields_for :categories, post.categories.build do |categories_fields| %>
+    <%= categories_fields.label :category_name %>
+    <%= categories_fields.text_field :name %>
+  <% end %><br>
+
+  <%= form.submit %>
+<% end %>
